// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotifyBackLink matches snapshot (default anchor) 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-link-top"
    href="/somewhere"
  >
    Back
  </a>
</DocumentFragment>
`;

exports[`NotifyBackLink matches snapshot when rendered as a button 1`] = `
<DocumentFragment>
  <button
    class="nhsuk-back-link"
    data-testid="back-link-top"
  >
    Back
  </button>
</DocumentFragment>
`;
